--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <a href="#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         </div>
         <div class="flex justify-end flex-1">
-          <a href="#" class="text-sm font-semibold leading-6 text-white"
-            >Kontakt<span aria-hidden="true">&rarr;</span></a
+          <a href="https://billing.stripe.com/p/login/test_7sI4jJdxD6Px6e4bII" class="text-sm font-semibold leading-6 text-white"
+            >Správa členství<span aria-hidden="true">&rarr;</span></a
           >
         </div>
       </nav>
@@ -60,7 +60,7 @@
           </p>
           <div class="flex items-center justify-center mt-10 gap-x-6">
             <a
-              href="#"
+              href="#clenstvi"
               class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400"
               >Stát se členem</a
             >
@@ -134,7 +134,7 @@
               </ul>
             </div>
             <a
-              href="#"
+              href="https://buy.stripe.com/test_bIY14m8ST5h3fa87ss"
               aria-describedby="tier-freelancer"
               class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300"
               >Stát se členem</a
@@ -193,7 +193,7 @@
               </ul>
             </div>
             <a
-              href="#"
+              href="https://buy.stripe.com/test_fZe28qgllbFrbXW4gh"
               aria-describedby="tier-startup"
               class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-white bg-indigo-600 rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover:bg-indigo-500"
               >Stát se členem</a
@@ -248,7 +248,7 @@
               </ul>
             </div>
             <a
-              href="#"
+              href="https://buy.stripe.com/test_28oaEW8STfVH0fe5km"
               aria-describedby="tier-enterprise"
               class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300"
               >Stát se členem</a
