--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body class="bg-gray-100">
     <header class="absolute inset-x-0 top-0 z-50">
       <nav
-        class="flex items-center justify-between flex-wrap xs:flex-nowrap p-6 px-8 whitespace-nowrap"
+        class="flex flex-wrap items-center justify-between p-6 px-8 xs:flex-nowrap whitespace-nowrap"
         aria-label="Global">
         <div class="flex grow shrink-0 basis-1/3">
           <a href="#" class="-m-1.5 p-1.5">
@@ -280,9 +280,10 @@
                 Jak to funguje?
               </dt>
               <dd class="mt-2 text-base leading-7 text-gray-600">
-                Po zaplacení členství pomocí online platebné brány, přijde na
-                email QR kód na email použitý při placení. Pomocí QR kódu se
-                dostane dovnitř i ven s fitness centra.
+                Po zaplacení členství obdržíte email s potvrzením o zaplacení.
+                Následně se vám na telefoní číslo uvedené při registraci ozve člen
+                personálu a domluví sí s vámi na osobním setkání. V rámci osobního
+                setkání vám bude vydán čip, kterým se budete přihlašovat do fitness centra.
               </dd>
             </div>
             <div>
@@ -299,9 +300,8 @@
                 Kdo mi ohlídá věci?
               </dt>
               <dd class="mt-2 text-base leading-7 text-gray-600">
-                Celý prostor fitness je monitorován kamerami se záznamem a ven
-                se dá dostat pouze pomocí QR kódu. Máme tak přehled o pohybu
-                členů.
+                Do prostor fitness centra se lze dostatat pouze s platným členstvím.
+                Navíc je prostor monitorován kamerami se záznamem, který bude v případě potřeby poskytnut policii.
               </dd>
             </div>
             <div>
