--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <a href="#clenstvi" class="text-sm font-semibold leading-6 text-white"
             >Členství</a
           >
+          <a href="#gallery" class="text-sm font-semibold leading-6 text-white">Galerie</a>
           <a href="#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         </div>
         <div class="flex justify-end grow shrink-0 basis-1/3">
@@ -56,7 +57,7 @@
             Olympia Gym
           </h1>
           <p class="mt-6 text-lg leading-8 text-gray-300">
-            S námi k vysněné formě.
+            Fitnes pro zaneprázdněné.
           </p>
           <div class="flex items-center justify-center mt-10 gap-x-6">
             <a
@@ -72,7 +73,7 @@
       </div>
     </section>
 
-    <section class="px-6 py-24 sm:py-32 lg:px-8" id="o-nas">
+    <section class="px-6 py-24 sm:py-16 lg:px-8" id="o-nas">
       <div class="max-w-2xl mx-auto text-center">
         <h2 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">
           Jsme první fitness klub v Ostravě s provozem 24/7.
@@ -80,6 +81,69 @@
         <p class="mt-6 text-lg leading-8 text-gray-600">
           Přijď cvičit kdykoliv se to hodí, ne, kdy je otevřeno.
         </p>
+      </div>
+    </section>
+
+    <section class="px-6 py-16 sm:py-8 lg:px-8" id="gallery">
+      <div class="h-full h-screen py-6 sm:py-8 lg:py-12">
+        <div class="px-4 mx-auto max-w-screen-2xl md:px-8">
+            <div class="flex items-center justify-between gap-8 mb-4 sm:mb-8 md:mb-12">
+                <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl dark:text-white">Jak to u nás vypadá</h2>
+
+                <a href="#"
+                    class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-none dark:bg-gray-700 dark:border-none dark:text-gray-200 ring-indigo-300 hover:bg-gray-100 focus-visible:ring active:bg-gray-200 md:px-8 md:py-3 md:text-base">
+                    Instagram
+                    <svg
+                      class="w-6 h-6 ml-2"
+                      fill="currentColor"
+                      viewBox="0 0 24 24"
+                      aria-hidden="true">
+                      <path
+                        fill-rule="evenodd"
+                        d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
+                        clip-rule="evenodd" />
+                    </svg>
+                </a>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
+                <!-- image - start -->
+                <div
+                    class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
+                    <img src="https://images.unsplash.com/photo-1593508512255-86ab42a8e620?auto=format&q=75&fit=crop&w=600" loading="lazy" alt="Photo by Minh Pham" class="absolute inset-0 object-cover object-center w-full h-full" />
+
+                    <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Kardio</span>
+                  </div>
+                <!-- image - end -->
+
+                <!-- image - start -->
+                <div
+                    class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:col-span-2 md:h-80">
+                    <img src="https://images.unsplash.com/photo-1542759564-7ccbb6ac450a?auto=format&q=75&fit=crop&w=1000" loading="lazy" alt="Photo by Magicle" class="absolute inset-0 object-cover object-center w-full h-full" />
+
+                    <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Relax</span>
+                  </div>
+                <!-- image - end -->
+
+                <!-- image - start -->
+                <div
+                    class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:col-span-2 md:h-80">
+                    <img src="https://images.unsplash.com/photo-1610465299996-30f240ac2b1c?auto=format&q=75&fit=crop&w=1000" loading="lazy" alt="Photo by Martin Sanchez" class="absolute inset-0 object-cover object-center w-full h-full" />
+
+                    <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Hlavní část</span>
+                  </div>
+                <!-- image - end -->
+
+                <!-- image - start -->
+                <div
+                    class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
+                    <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?auto=format&q=75&fit=crop&w=600" loading="lazy" alt="Photo by Lorenzo Herrera" class="absolute inset-0 object-cover object-center w-full h-full" />
+
+                    <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Dřepy</span>
+                  </div>
+                <!-- image - end -->
+            </div>
+        </div>
       </div>
     </section>
 
@@ -333,19 +397,6 @@
         class="px-6 py-12 mx-auto max-w-7xl md:flex md:items-center md:justify-between lg:px-8">
         <div class="flex justify-center space-x-6 md:order-2">
           <a href="#" class="text-gray-400 hover:text-gray-500">
-            <span class="sr-only">Facebook</span>
-            <svg
-              class="w-6 h-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-              aria-hidden="true">
-              <path
-                fill-rule="evenodd"
-                d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
-                clip-rule="evenodd" />
-            </svg>
-          </a>
-          <a href="#" class="text-gray-400 hover:text-gray-500">
             <span class="sr-only">Instagram</span>
             <svg
               class="w-6 h-6"
@@ -356,17 +407,6 @@
                 fill-rule="evenodd"
                 d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
                 clip-rule="evenodd" />
-            </svg>
-          </a>
-          <a href="#" class="text-gray-400 hover:text-gray-500">
-            <span class="sr-only">X</span>
-            <svg
-              class="w-6 h-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-              aria-hidden="true">
-              <path
-                d="M13.6823 10.6218L20.2391 3H18.6854L12.9921 9.61788L8.44486 3H3.2002L10.0765 13.0074L3.2002 21H4.75404L10.7663 14.0113L15.5685 21H20.8131L13.6819 10.6218H13.6823ZM11.5541 13.0956L10.8574 12.0991L5.31391 4.16971H7.70053L12.1742 10.5689L12.8709 11.5655L18.6861 19.8835H16.2995L11.5541 13.096V13.0956Z" />
             </svg>
           </a>
           <a href="#" class="text-gray-400 hover:text-gray-500">
@@ -384,10 +424,10 @@
           </a>
         </div>
         <div class="mt-8 md:order-1 md:mt-0">
-          <p class="text-xs leading-5 text-center text-gray-500">
-            &copy; 2024 OlympiaGym s.r.o., Čujkovova 1714/21, Zábřeh, 700 30
+          <a class="text-xs leading-5 text-center text-gray-500 underline hover:text-purple-600" href="https://en.mapy.cz/s/luhovaroga">
+            &copy; 2024 OlympiaGym s.r.o., Ludvíka Podéště 1974/25, Ostrava - Poruba, 708 00
             Ostrava, IČO 21316341
-          </p>
+          </a>
         </div>
       </div>
     </footer>
