--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
-    <link rel="icon" href="/static/favicon.png" />
+    <link rel="icon" href="/static/images/favicon.png" />
   </head>
 
   <body class="bg-gray-100">
@@ -26,7 +26,7 @@
             <span class="sr-only">Olympia Gym</span>
             <img
               class="w-auto h-8"
-              src="/static/favicon.png"
+              src="/static/images/favicon.png"
               alt="" />
           </a>
         </div>
@@ -85,64 +85,80 @@
     </section>
 
     <section class="px-6 py-16 sm:py-8 lg:px-8" id="gallery">
-      <div class="h-full h-screen py-6 sm:py-8 lg:py-12">
-        <div class="px-4 mx-auto max-w-screen-2xl md:px-8">
-            <div class="flex items-center justify-between gap-8 mb-4 sm:mb-8 md:mb-12">
-                <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl dark:text-white">Jak to u nás vypadá</h2>
+      <div class="container h-full py-6 mx-auto sm:py-8 lg:py-12">
+          <div class="flex items-center justify-between gap-8 mb-4 sm:mb-8 md:mb-12">
+              <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl dark:text-white">Jak to u nás vypadá</h2>
 
-                <a href="#"
-                    class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-none dark:bg-gray-700 dark:border-none dark:text-gray-200 ring-indigo-300 hover:bg-gray-100 focus-visible:ring active:bg-gray-200 md:px-8 md:py-3 md:text-base">
-                    Instagram
-                    <svg
-                      class="w-6 h-6 ml-2"
-                      fill="currentColor"
-                      viewBox="0 0 24 24"
-                      aria-hidden="true">
-                      <path
-                        fill-rule="evenodd"
-                        d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
-                        clip-rule="evenodd" />
-                    </svg>
-                </a>
-            </div>
+              <a href="#"
+                  class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-none dark:bg-gray-700 dark:border-none dark:text-gray-200 ring-indigo-300 hover:bg-gray-100 focus-visible:ring active:bg-gray-200 md:px-8 md:py-3 md:text-base">
+                  Instagram
+                  <svg
+                    class="w-6 h-6 ml-2"
+                    fill="currentColor"
+                    viewBox="0 0 24 24"
+                    aria-hidden="true">
+                    <path
+                      fill-rule="evenodd"
+                      d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
+                      clip-rule="evenodd" />
+                  </svg>
+              </a>
+          </div>
 
-            <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
-                <!-- image - start -->
-                <div
-                    class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
-                    <img src="https://images.unsplash.com/photo-1593508512255-86ab42a8e620?auto=format&q=75&fit=crop&w=600" loading="lazy" alt="Photo by Minh Pham" class="absolute inset-0 object-cover object-center w-full h-full" />
+          <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3 md:gap-6 xl:gap-8">
+              <!-- image - start -->
+              <div
+                  class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
+                  <img src="static/images/gym/cardio.jpeg" loading="lazy" alt="kardio zona" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                    <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Kardio</span>
-                  </div>
-                <!-- image - end -->
+                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Kardio zóna</span>
+                </div>
+              <!-- image - end -->
 
-                <!-- image - start -->
-                <div
-                    class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:col-span-2 md:h-80">
-                    <img src="https://images.unsplash.com/photo-1542759564-7ccbb6ac450a?auto=format&q=75&fit=crop&w=1000" loading="lazy" alt="Photo by Magicle" class="absolute inset-0 object-cover object-center w-full h-full" />
+              <!-- image - start -->
+              <div
+                  class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
+                  <img src="static/images/gym/dumbells2.jpeg" loading="lazy" alt="jednoručky" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                    <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Relax</span>
-                  </div>
-                <!-- image - end -->
+                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Jednoručky</span>
+                </div>
+              <!-- image - end -->
 
-                <!-- image - start -->
-                <div
-                    class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:col-span-2 md:h-80">
-                    <img src="https://images.unsplash.com/photo-1610465299996-30f240ac2b1c?auto=format&q=75&fit=crop&w=1000" loading="lazy" alt="Photo by Martin Sanchez" class="absolute inset-0 object-cover object-center w-full h-full" />
+              <!-- image - start -->
+              <div
+                  class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
+                  <img src="static/images/gym/barbells.jpeg" loading="lazy" alt="obouručky" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                    <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Hlavní část</span>
-                  </div>
-                <!-- image - end -->
+                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Obouručky</span>
+                </div>
+              <!-- image - end -->
 
-                <!-- image - start -->
-                <div
-                    class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
-                    <img src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?auto=format&q=75&fit=crop&w=600" loading="lazy" alt="Photo by Lorenzo Herrera" class="absolute inset-0 object-cover object-center w-full h-full" />
+              <!-- image - start -->
+              <div
+                  class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
+                  <img src="static/images/gym/squat.jpeg" loading="lazy" alt="dřepy" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                    <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Dřepy</span>
-                  </div>
-                <!-- image - end -->
-            </div>
+                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Dřepy</span>
+                </div>
+              <!-- image - end -->
+
+              <!-- image - start -->
+              <div
+                  class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
+                  <img src="static/images/gym/multipress.jpeg" loading="lazy" alt="multipress" class="absolute inset-0 object-cover object-center w-full h-full" />
+
+                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Multipress</span>
+                </div>
+              <!-- image - end -->
+
+              <!-- image - start -->
+              <div
+                  class="relative flex items-end h-48 overflow-hidden bg-gray-100 rounded-lg shadow-lg group md:h-80">
+                  <img src="static/images/gym/legs.jpeg" loading="lazy" alt="roznožování a znožování" class="absolute inset-0 object-cover object-center w-full h-full" />
+
+                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Dřepy</span>
+                </div>
+              <!-- image - end -->
         </div>
       </div>
     </section>
@@ -223,7 +239,7 @@
               </p>
               <p class="flex items-baseline mt-6 gap-x-1">
                 <span class="text-4xl font-bold tracking-tight text-gray-900"
-                  >2 499 Kč</span
+                  >3 299 Kč</span
                 >
                 <span class="text-sm font-semibold leading-6 text-gray-600"
                   >/3 měsíce</span
@@ -278,7 +294,7 @@
               </p>
               <p class="flex items-baseline mt-6 gap-x-1">
                 <span class="text-4xl font-bold tracking-tight text-gray-900"
-                  >999 Kč</span
+                  >1 299 Kč</span
                 >
                 <span class="text-sm font-semibold leading-6 text-gray-600"
                   >/měsíc</span
