--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a href="#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         </div>
         <div class="flex justify-end grow shrink-0 basis-1/3">
-          <a href="https://billing.stripe.com/p/login/test_7sI4jJdxD6Px6e4bII" class="text-sm font-semibold leading-6 text-white"
+          <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU" class="text-sm font-semibold leading-6 text-white"
             >Správa členství<span aria-hidden="true">&rarr;</span></a
           >
         </div>
@@ -68,7 +68,7 @@
             Olympia Gym
           </h1>
           <p class="mt-6 text-lg leading-8 text-gray-300">
-            Fitnes pro zaneprázdněné.
+            Fitness 24/7
           </p>
           <div class="flex items-center justify-center mt-10 gap-x-6">
             <a
@@ -100,7 +100,7 @@
           <div class="flex items-center justify-between gap-8 mb-4 sm:mb-8 md:mb-12">
               <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl dark:text-white">Jak to u nás vypadá</h2>
 
-              <a href="#"
+              <a href="https://www.instagram.com/olympiagymcz/"
                   class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-none dark:bg-gray-700 dark:border-none dark:text-gray-200 ring-indigo-300 hover:bg-gray-100 focus-visible:ring active:bg-gray-200 md:px-8 md:py-3 md:text-base">
                   Instagram
                   <svg
@@ -122,7 +122,7 @@
                   class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 md:h-auto md:row-span-2 group">
                  <img src="static/images/gym/cardio.jpeg" loading="lazy" alt="kardio zona" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Kardio zóna</span>
+                <!--<span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Kardio zóna</span>-->
               </div>
               <!-- image - end -->
 
@@ -131,7 +131,6 @@
                   class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
                   <img src="static/images/gym/dumbells2.jpeg" loading="lazy" alt="jednoručky" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Jednoručky</span>
                 </div>
               <!-- image - end -->
 
@@ -140,7 +139,6 @@
                   class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
                   <img src="static/images/gym/barbells.jpeg" loading="lazy" alt="obouručky" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Obouručky</span>
                 </div>
               <!-- image - end -->
 
@@ -149,7 +147,6 @@
                   class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
                   <img src="static/images/gym/squat.jpeg" loading="lazy" alt="dřepy" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Dřepy</span>
                 </div>
               <!-- image - end -->
 
@@ -157,8 +154,6 @@
               <div
                   class="relative flex items-end row-span-2 overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group md:h-auto">
                   <img src="static/images/gym/legpress.jpeg" loading="lazy" alt="roznožování a znožování" class="absolute inset-0 object-cover object-center w-full h-full" />
-
-                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Legpress</span>
                 </div>
               <!-- image - end -->
 
@@ -167,16 +162,14 @@
                   class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
                   <img src="static/images/gym/multipress.jpeg" loading="lazy" alt="multipress" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Multipress</span>
                 </div>
               <!-- image - end -->
 
               <!-- image - start -->
               <div
                   class="relative flex items-end overflow-hidden bg-gray-100 rounded-lg shadow-lg h-80 group">
-                  <img src="static/images/gym/legs.jpeg" loading="lazy" alt="roznožování a znožování" class="absolute inset-0 object-cover object-center w-full h-full" />
+                  <img src="static/images/gym/legs.jpeg" loading="lazy" alt="roznožování a snožování" class="absolute inset-0 object-cover object-center w-full h-full" />
 
-                  <span class="relative inline-block mb-3 ml-4 text-sm text-white md:ml-5 md:text-lg">Nohy</span>
                 </div>
               <!-- image - end -->
 
@@ -189,7 +182,7 @@
       <div class="px-6 mx-auto max-w-7xl lg:px-8">
         <div class="max-w-4xl mx-auto text-center">
           <h2 class="text-base font-semibold leading-7 text-indigo-600">
-            Ceny členství
+            Možnosti členství
           </h2>
           <p
             class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">
@@ -198,7 +191,7 @@
         </div>
         <p
           class="max-w-2xl mx-auto mt-6 text-lg leading-8 text-center text-gray-600">
-          Jsme privátní fitness centrum, které je otevřeno 24/7. Abychom mohli nabídnout maximálné pohodlí a bezpečí,
+          Jsme privátní fitness centrum, které je otevřeno 24/7. Abychom mohli nabídnout maximální pohodlí a bezpečí,
           neumožňujeme vstup do centra bez předchozí registrace a zaplacení členství. Díky tomu můžeme zajistit, že
           fitness centrum nebude přeplněné a bude dostatek prostoru pro všechny.
         </p>
@@ -209,7 +202,7 @@
             <div>
               <div class="flex items-center justify-between gap-x-4">
                 <h3
-                  id="tier-freelancer"
+                  id="tier-single-entry"
                   class="text-lg font-semibold leading-8 text-gray-900">
                   Členství na jeden den
                 </h3>
@@ -225,18 +218,18 @@
                   <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Členství platí 24 hodin od zakoupení.
+                  Vstup Vám bude umožněn po předchozí telefonické domluvě.
                 </li>
                 <li class="flex gap-x-3">
                   <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Samoobslužný vstup.
+                  Vstup na zkoušku.
                 </li>
               </ul>
             </div>
             <a
-              href="https://buy.stripe.com/test_bIY14m8ST5h3fa87ss"
+              href="https://buy.stripe.com/3csdRvfv02QpfhmdQS"
               aria-describedby="tier-freelancer"
               class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300"
               >Stát se členem</a
@@ -247,7 +240,7 @@
             <div>
               <div class="flex items-center justify-between gap-x-4">
                 <h3
-                  id="tier-startup"
+                  id="tier-quarterly"
                   class="text-lg font-semibold leading-8 text-indigo-600">
                   3 měsíční členství
                 </h3>
@@ -284,7 +277,7 @@
                   <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Pokud se vám u nás nebude líbit, <br> můžete do tří dnů zrušit bez jakéhokoli poplatku.
+                  Pokud se vám u nás nebude líbit, <br> můžete do 24 hodin zrušit členství bez jakéhokoli poplatku.
                 </li>
                 <li class="flex gap-x-3">
                   <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -295,7 +288,7 @@
               </ul>
             </div>
             <a
-              href="https://buy.stripe.com/test_fZe28qgllbFrbXW4gh"
+              href="https://buy.stripe.com/4gwcNr6Yu2Qp3yEaEF"
               aria-describedby="tier-startup"
               class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-white bg-indigo-600 rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover:bg-indigo-500"
               >Stát se členem</a
@@ -306,7 +299,7 @@
             <div>
               <div class="flex items-center justify-between gap-x-4">
                 <h3
-                  id="tier-enterprise"
+                  id="tier-monthly"
                   class="text-lg font-semibold leading-8 text-gray-900">
                   Měsíční členství
                 </h3>
@@ -339,7 +332,7 @@
                   <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Pokud se vám u nás nebude líbit, <br> můžete do 24 hodin zrušit bez jakéhokoli poplatku.
+                  Pokud se vám u nás nebude líbit, <br> můžete do 24 hodin zrušit členství bez jakéhokoli poplatku.
                 </li>
                 <li class="flex gap-x-3">
                   <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -350,7 +343,7 @@
               </ul>
             </div>
             <a
-              href="https://buy.stripe.com/test_28oaEW8STfVH0fe5km"
+              href="https://buy.stripe.com/eVa28N1Eadv31qwbII"
               aria-describedby="tier-enterprise"
               class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300"
               >Stát se členem</a
@@ -368,7 +361,7 @@
         <p class="max-w-2xl mt-6 text-base leading-7 text-gray-600">
           Není zde odpovězeno vše? Kontaktujte nás
           <a
-            href="#"
+            href="mailto:olympiagymcz@gmail.com?subject=Olympia Gym - dotaz z webu"
             class="font-semibold text-indigo-600 hover:text-indigo-500"
             >na email</a
           >
@@ -383,7 +376,7 @@
               </dt>
               <dd class="mt-2 text-base leading-7 text-gray-600">
                 Po zaplacení členství obdržíte email s potvrzením o zaplacení.
-                Následně se vám na telefoní číslo uvedené při registraci ozve člen
+                Následně se vám na telefonní číslo uvedené při registraci ozve člen
                 personálu a domluví sí s vámi na osobním setkání. V rámci osobního
                 setkání vám bude vydán čip, kterým se budete přihlašovat do fitness centra.
               </dd>
@@ -402,7 +395,7 @@
                 Kdo mi ohlídá věci?
               </dt>
               <dd class="mt-2 text-base leading-7 text-gray-600">
-                Do prostor fitness centra se lze dostatat pouze s platným členstvím.
+                Do prostor fitness centra se lze dostat pouze s platným členstvím.
                 Navíc je prostor monitorován kamerami se záznamem, který bude v případě potřeby poskytnut policii.
               </dd>
             </div>
@@ -434,7 +427,7 @@
       <div
         class="px-6 py-12 mx-auto max-w-7xl md:flex md:items-center md:justify-between lg:px-8">
         <div class="flex justify-center space-x-6 md:order-2">
-          <a href="#" class="text-gray-400 hover:text-gray-500">
+          <a href="https://www.instagram.com/olympiagymcz/" class="text-gray-400 hover:text-gray-500">
             <span class="sr-only">Instagram</span>
             <svg
               class="w-6 h-6"
