--- a/rules.html
+++ b/rules.html
@@ -40,6 +40,7 @@
         <a href="index.html#gallery" class="text-sm font-semibold leading-6 text-white">Galerie</a>
         <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
+        <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex justify-end grow shrink-0 basis-1/3">
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
@@ -154,7 +155,7 @@
 
       <p class="my-5 text-base leading-8">
         Provozovatel: OlympiaGym s.r.o., Čujkovova 1714/21, Zábřeh, 700 30 Ostrava, IČO 21316341,
-        Kontaktní osoba: Lukáš Filip, lukas.filip92@gmail.com, +420 735 935 028
+        Kontaktní osoba: Lukáš Filip, olympiagymcz@gmail.com, +420 735 935 028
       </p>
 
 
