--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="index.html#gallery" class="text-sm font-semibold leading-6 text-white">Galerie</a>
         <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
         <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
+        <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
       <div class="flex justify-end grow shrink-0 basis-1/3">
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
