--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </div>
   </section>
 
-  <section class="py-24sm:py-32" id="clenstvi">
+  <section class="w-full py-24 sm:py-32" id="clenstvi">
     <div class="px-6 mx-auto max-w-7xl lg:px-8">
       <div class="max-w-4xl mx-auto text-center">
         <h2 class="text-base font-semibold leading-7 text-indigo-600">
@@ -180,7 +180,7 @@
         fitness centrum nebude přeplněné a bude dostatek prostoru pro všechny.
       </p>
       <div
-        class="grid max-w-md grid-cols-1 mx-auto mt-16 isolate gap-y-8 sm:mt-20 lg:mx-0 lg:max-w-none lg:grid-cols-4">
+        class="grid max-w-md grid-cols-1 mx-auto mt-16 isolate gap-y-8 sm:mt-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
         <div
           class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-r-none">
           <div>
@@ -219,123 +219,33 @@
             se členem</a>
         </div>
         <div
-          class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:z-10 lg:rounded-b-none">
-          <div>
-            <div class="flex flex-col items-start space-y-2">
-              <h3 id="tier-quarterly" class="text-lg font-semibold leading-8 text-indigo-600">
-                Vánoční 6 měsíční členství
-              </h3>
-              <p class="rounded-full bg-indigo-600/10 px-2.5 py-1 text-xs font-semibold leading-5 text-indigo-600">
-                Nejvýhodnější
-              </p>
-            </div>
-            <p class="mt-4 text-sm leading-6 text-gray-600">
-              Náš Vánoční dárek pro vás.
-            </p>
-            <p class="flex items-baseline mt-6 gap-x-1">
-              <span class="text-4xl font-bold tracking-tight text-gray-900">6 000 Kč</span>
-              <span class="text-sm font-semibold leading-6 text-gray-600">/6 měsíce</span>
-            </p>
-            <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
-              <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd" />
-                </svg>
-                Platí po dobu 6 měsíců od zakoupení. <br> Účtuje se po 6 měsících automaticky.
-              </li>
-              <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd" />
-                </svg>
-                Samoobslužný vstup.
-              </li>
-              <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd" />
-                </svg>
-                Pokud se vám u nás nebude líbit, <br> můžete do 24 hodin zrušit členství bez jakéhokoli poplatku.
-              </li>
-              <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd" />
-                </svg>
-                Členství lze kdykoliv zrušit, dalších 6 měsíců se již neúčtuje.
-              </li>
-            </ul>
-          </div>
-          <a href="https://buy.stripe.com/eVa4gVaaG9eNglqaEH" aria-describedby="tier-startup"
-            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-white bg-indigo-600 rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover:bg-indigo-500">Stát
-            se členem</a>
-        </div>
-        <div
-          class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-none">
+          class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-b-none lg:rounded-t-none">
           <div>
             <div class="flex items-center justify-between gap-x-4">
-              <h3 id="tier-quarterly" class="text-lg font-semibold leading-8 text-indigo-600">
-                3 měsíční členství
+              <h3 id="tier-single-entry-trainer" class="text-lg font-semibold leading-8 text-gray-900">
+                Vstup do fitness centra s trenérem
               </h3>
             </div>
-            <p class="mt-4 text-sm leading-6 text-gray-600">
-              Pro každého kdo to s cvičením myslí vážně.
-            </p>
+            <p class="mt-4 text-sm leading-6 text-gray-600">60minutový trénink pod vedením zkušeného trenéra včetně vstupu do fitness</p>
             <p class="flex items-baseline mt-6 gap-x-1">
-              <span class="text-4xl font-bold tracking-tight text-gray-900">3 299 Kč</span>
-              <span class="text-sm font-semibold leading-6 text-gray-600">/3 měsíce</span>
+              <span class="text-4xl font-bold tracking-tight text-gray-900">1000 Kč</span>
             </p>
             <ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600">
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd" />
+                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
-                Platí po dobu 3 měsíců od zakoupení. <br> Účtuje se po 3 měsících.
+                Vstup Vám bude umožněn po předchozí telefonické domluvě.
               </li>
               <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd" />
+                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
-                Samoobslužný vstup.
-              </li>
-              <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd" />
-                </svg>
-                Pokud se vám u nás nebude líbit, <br> můžete do 24 hodin zrušit členství bez jakéhokoli poplatku.
-              </li>
-              <li class="flex gap-x-3">
-                <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
-                  aria-hidden="true">
-                  <path fill-rule="evenodd"
-                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                    clip-rule="evenodd" />
-                </svg>
-                Členství lze kdykoliv zrušit, další 3 měsíce se již neúčtují.
+                Vstup na zkoušku s trenérem.
               </li>
             </ul>
           </div>
-          <a href="https://buy.stripe.com/4gwcNr6Yu2Qp3yEaEF" aria-describedby="tier-startup"
-            class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Stát
-            se členem</a>
+          <a href="https://buy.stripe.com/3csdRvfv02QpfhmdQS" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Stát se členem</a>
         </div>
         <div
           class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-l-none">
