updated to new tailwind properly

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <section class="relative min-h-screen" id="hero">
     <div class="absolute inset-0 bg-center bg-cover bg-hero-bg-mobile md:bg-hero-bg">
-      <div class="absolute inset-0 bg-gradient-to-r from-black/30 to-black/60"></div>
+      <div class="absolute inset-0 bg-linear-to-r from-black/30 to-black/60"></div>
     </div>
 
     <div class="relative z-10 max-w-2xl py-32 mx-auto sm:py-48 lg:py-56">
@@ -64,7 +64,7 @@
         </p>
         <div class="flex items-center justify-center mt-10 gap-x-6">
           <a href="#clenstvi"
-            class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400">Stát
+            class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400">Stát
             se členem</a>
           <a href="#o-nas" class="text-sm font-semibold leading-6 text-white">Zjistit více. <span
               aria-hidden="true">→</span></a>
@@ -90,7 +90,7 @@
         <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl dark:text-white">Jak to u nás vypadá</h2>
 
         <a href="https://www.instagram.com/olympiagymcz/"
-          class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-none dark:bg-gray-700 dark:border-none dark:text-gray-200 ring-indigo-300 hover:bg-gray-100 focus-visible:ring active:bg-gray-200 md:px-8 md:py-3 md:text-base">
+          class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-hidden dark:bg-gray-700 dark:border-none dark:text-gray-200 ring-indigo-300 hover:bg-gray-100 focus-visible:ring-3 active:bg-gray-200 md:px-8 md:py-3 md:text-base">
           Instagram
           <svg class="w-6 h-6 ml-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
             <path fill-rule="evenodd"
