--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
                 </svg>
-                Vstup na zkoušku.
+                S sebou obuv ktera neprisla do kontaktu s venkovním prostředím a ručník.
               </li>
             </ul>
           </div>
@@ -235,17 +235,17 @@
                 <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
-                Vstup Vám bude umožněn po předchozí telefonické domluvě.
+                Trenér se vám ozve a domluví si svami termín tréninku
               </li>
               <li class="flex gap-x-3">
                 <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                   <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                 </svg>
-                Vstup na zkoušku s trenérem.
+                S sebou obuv ktera neprisla do kontaktu s venkovním prostředím a ručník.
               </li>
             </ul>
           </div>
-          <a href="https://buy.stripe.com/3csdRvfv02QpfhmdQS" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Stát se členem</a>
+          <a href="https://buy.stripe.com/aEU7t71Ea9eNd9e6os" aria-describedby="tier-single-entry-trainer" class="block px-3 py-2 mt-8 text-sm font-semibold leading-6 text-center text-indigo-600 rounded-md focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ring-1 ring-inset ring-indigo-200 hover:ring-indigo-300">Stát se členem</a>
         </div>
         <div
           class="flex flex-col justify-between p-8 bg-white rounded-3xl ring-1 ring-gray-200 xl:p-10 lg:mt-8 lg:rounded-l-none">
@@ -270,7 +270,7 @@
                     d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
                     clip-rule="evenodd" />
                 </svg>
-                Platí po měsíc od zakoupení. <br> Účtuje se po měsíci.
+                S sebou obuv ktera neprisla do kontaktu s venkovním prostředím a ručník.
               </li>
               <li class="flex gap-x-3">
                 <svg class="flex-none w-5 h-6 text-indigo-600" viewBox="0 0 20 20" fill="currentColor"
