--- a/rules.html
+++ b/rules.html
@@ -37,8 +37,8 @@
       </div>
       <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
         <a href="index.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
-        <a href="index.html#gallery" class="text-sm font-semibold leading-6 text-white">Galerie</a>
         <a href="index.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
+        <a href="gallery.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
         <a href="rules.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
         <a href="contact.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
       </div>
