--- a/en/rules_en.html
+++ b/en/rules_en.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>Olympia Gym - provozní řád</title>
+  <title>Olympia Gym - Rules</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="/static/output.css" />
   <link
@@ -12,14 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
   <link rel="icon" href="/static/images/favicon.png" />
-  <meta name="description" content="Olympia Gym - pro ty co chtějí cvičit." />
-  <meta property="og:title" content="Olympia Gym - provozní řád" />
-  <meta property="og:description" content="Olympia Gym - pro ty co chtějí cvičit." />
+  <meta name="description" content="Olympia Gym - for those who want to work out." />
+  <meta property="og:title" content="Olympia Gym - Rules" />
+  <meta property="og:description" content="Olympia Gym - for those who want to work out." />
   <meta property="og:image" content="/static/images/og_image.png" />
   <meta property="og:url" content="https://olympiagym.cz/rules.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Olympia Gym" />
-  <meta property="og:locale" content="cs_CZ" />
+  <meta property="og:locale" content="en_US" />
   <meta property="og:image:type" content="image/.png" />
   <meta property="og:image:width" content="1084" />
   <meta property="og:image:height" content="703" />
@@ -36,17 +36,17 @@
         </a>
       </div>
       <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
-        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
+        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Membership</a>
         <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
-        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
-        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
+        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
+        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Rules</a>
+        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Contact</a>
       </div>
       <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
         <a href="../index.html"
           class="text-sm font-semibold leading-6 text-white">CZ<span aria-hidden="true">🇨🇿</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
-          class="text-sm font-semibold leading-6 text-white">Správa členství<span aria-hidden="true">&rarr;</span></a>
+          class="text-sm font-semibold leading-6 text-white">Membership Management<span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
   </header>
@@ -55,111 +55,109 @@
 
     <div class="max-w-2xl mt-3 leading-normal">
 
-      <h1 href="#" class="text-4xl font-bold text-gray-900">Provozní řád</h1>
+      <h1 href="#" class="text-4xl font-bold text-gray-900">Rules</h1>
       <hr>
 
       <p class="my-5 text-base leading-8">
-        Tento provozní řád upravuje vzájemné smluvní podmínky, kterými se řídí právní vztahy mezi
-        provozovatelem a jeho návštěvníky při poskytování služeb ze strany provozovatele těmto
-        návštěvníkům.
+        These rules govern the mutual contractual conditions that regulate the legal relationships between
+        the operator and its visitors when providing services by the operator to these
+        visitors.
       </p>
 
       <p class="my-5 text-base leading-8">
-        OlympiaGym jsou oprávněni užívat pouze osoby starší 18 let (mladším osobám jen se souhlasem
-        zákonného zástupce, ne však pro osoby mladší 15 let), předem registrované u provozovatele,
-        kterým byl vydán osobní vstupní kód zajišťující vstup do prostor OlympiaGym, a kteří se podrobně
-        seznámily s tímto provozním řádem.
+        OlympiaGym may only be used by persons over 18 years of age (younger persons only with the consent
+        of a legal representative, but not for persons under 15 years of age), who are pre-registered with the operator,
+        who have been issued a personal entry code ensuring entry to the OlympiaGym premises, and who have thoroughly
+        familiarized themselves with these rules.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Zakazuje se vstup do prostoru OlympiaGym bez řádně zaplaceného členství. Vstup do
-        OlympiaGym je samoobslužný prostřednictvím čipu, který je přiřazován individuálně a hlídán
-        systémově.
+        Entry to the OlympiaGym premises is prohibited without a properly paid membership. Entry to
+        OlympiaGym is self-service through a chip, which is assigned individually and monitored
+        systematically.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Každý člen OlympiaGym je povinen seznámit se s tímto provozním řádem a jednat a chovat se v
-        souladu s ním.
+        Every member of OlympiaGym is obliged to familiarize themselves with these rules and act and behave in
+        accordance with them.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Uhrazením členství dle platného ceníku a/nebo vstupem do prostor posilovny s ním vyjadřuje plný
-        souhlas. Členové jsou oprávnění užívat jednotlivá zařízení a náčiní OlympiaGym nebo čerpat jeho
-        služby na základě řádně uhrazeného členství dle stanoveného ceníku.Každý člen je plně
-        zodpovědný za svůj zdravotní stav.
+        By paying the membership fee according to the valid price list and/or entering the gym premises, they express full
+        agreement. Members are entitled to use individual equipment and tools of OlympiaGym or use its
+        services based on a properly paid membership according to the established price list. Each member is fully
+        responsible for their health condition.
       </p>
 
       <p class="my-5 text-base leading-8">
-        OlympiaGym nenese odpovědnost za jakékoliv škody na zdraví či na majetku, které si člen
-        způsobí úmyslně, z nedbalosti či přeceněním své fyzické kondice.
+        OlympiaGym is not responsible for any damage to health or property caused by a member
+        intentionally, negligently, or by overestimating their physical condition.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Každý člen je povinen používat sportovní oděv, obuv a při cvičení na posilovacích přístrojích také
-        ručník. Při provozování příslušné sportovní činnosti nesmí ohrozit své zdraví, ani zdraví ostatních
-        členů a nesmí poškozovat majetek.
+        Every member is obliged to wear sports clothing, shoes, and also a towel when exercising on fitness equipment.
+        When performing the respective sports activity, they must not endanger their health or the health of other
+        members and must not damage property.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Zakazuje se znečišťovat prostory OlympiaGym. Veškeré svršky je každý povinen uložit na místě k
-        tomu určeném, tj. do šatních skříněk, případně na lavici u vchodu, případně nechat ve svojí tašce.
-        Stejně tak boty se uloží při vstupu do OlympiaGym do botníků. OlympiaGym neodpovídá za
-        škodu na věcech vnesených členem do prostoru posilovny.V případě zjištění jakéhokoli poškození
-        přístroje (činek, strojů), nebo cvičebních pomůcek je každého povinností bezodkladně nahlásit
-        provozovateli OlympiaGym.
+        It is forbidden to pollute the OlympiaGym premises. All outerwear must be stored in the designated place,
+        i.e., in the lockers, or on the bench at the entrance, or left in their bag.
+        Similarly, shoes must be stored in the shoe racks at the entrance to OlympiaGym. OlympiaGym is not responsible for
+        damage to items brought by a member into the gym premises. In case of any damage
+        to equipment (dumbbells, machines), or exercise aids, it is the duty of each member to immediately report it
+        to the operator of OlympiaGym.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Užívání takovýchto zařízení či vybavení je až do odstranění závad přísně zakázáno.Členové
-        OlympiaGym jsou povinni se chovat ukázněně a s náležitou opatrností tak, aby neohrožovali
-        zdraví své, ani zdraví ostatních osob. V opačném případě má provozovatel právo takovému
-        jedinci ukončit členství bez náhrady.Je zakázáno ponechávat si klíče od šatních skříněk při
-        odchodu mimo prostory OlympiaGym. Po skončení cvičení si každý po sobě uklidí nářadí a náčiní
-        na své vyhrazené místo.
+        The use of such equipment or facilities is strictly prohibited until the defects are removed. Members
+        of OlympiaGym are obliged to behave disciplined and with due caution so as not to endanger
+        their health or the health of others. Otherwise, the operator has the right to terminate the membership of such
+        an individual without compensation. It is forbidden to keep the keys to the lockers when
+        leaving the OlympiaGym premises. After finishing the exercise, everyone must clean up the equipment and tools
+        in their designated place.
       </p>
 
       <p class="my-5 text-base leading-8">
-        V prostorách OlympiaGym platí přísný zákaz kouření, konzumace alkoholických nápojů,
-        omamných látek a dalších psychotropních látek. Ve všech prostorech vyjma relax zóny, platí zákaz
-        konzumace potravin, sladkých a proteinových nápojů.
+        There is a strict ban on smoking, consuming alcoholic beverages,
+        narcotics, and other psychotropic substances in the OlympiaGym premises. In all areas except the relaxation zone, it is forbidden
+        to consume food, sweet, and protein drinks.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Ve výjimečných případech a po předchozím souhlasu OlympiaGym se smí děti pohybovat v
-        posilovně, a to pouze v doprovodu rodičů, kteří výslovně a nepřenositelně nesou plnou
-        odpovědnost za případné škody na zdraví svého dítěte i majetku provozovatele způsobené
-        pohybem dítěte.
+        In exceptional cases and with the prior consent of OlympiaGym, children may move around in
+        the gym, but only accompanied by parents, who explicitly and non-transferably bear full
+        responsibility for any damage to their child's health and the operator's property caused
+        by the child's movement.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Členové OlympiaGym odpovídají za škodu či ztrátu způsobenou provozovateli a to v plné výši, byť
-        se jedná o čin neúmyslný. Každý člen je povinen při odchodu z šatny šatní skříňku vyprázdnit. Je
-        povinen klíč od šatní skříňky opatrovat a při odchodu klíč ponechat v zámku skříňky.
+        Members of OlympiaGym are responsible for damage or loss caused to the operator in full, even
+        if it is an unintentional act. Each member is obliged to empty the locker when leaving the locker room. They
+        are obliged to take care of the locker key and leave the key in the lock of the locker when leaving.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Členové odpovídají za škodu, která vznikne provozovateli ztrátou klíče, poškozením zámku, nebo
-        jiným zneužitím. V případě ztráty, poškození či zneužití je povinen návštěvník uhradit částku
-        1000,-Kč za poškození zámku, 250,- Kč za ztrátu klíče.
+        Members are responsible for damage caused to the operator by the loss of the key, damage to the lock, or
+        other misuse. In case of loss, damage, or misuse, the visitor is obliged to pay the amount
+        of 1000 CZK for damage to the lock, 250 CZK for the loss of the key.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Před odchodem z OlympiaGym jsou členové povinní zhasnout světla, zavřít okna a ujistit se, že
-        vchodové dveře byly řádně zavřeny. OlympiaGym upozorňuje své členy a členové berou tímto na
-        vědomí, potažmo výslovně souhlasí s tím, že budou v prostorách OlympiaGym monitorováni
-        kamerovým systémem. Účelem provozování takového kamerového sytému je nejenom ochrana
-        práv a oprávněných zájmů OlympiaGym, a to v podobě všeobecné ochrany majetku
-        OlympiaGym, ale i ochrana zdraví a majetku členů pohybujících se v prostorách OlympiaGym.
-        Kamerový systém zaznamenává pouze veřejné prostory, není provozován v prostorách, jako jsou
-        toalety a šatny.
-        Přístup k záznamům mají jen pověřené osoby. Kamerové záznamy jsou mazány každých 31 dnů.
+        Before leaving OlympiaGym, members are obliged to turn off the lights, close the windows, and ensure that
+        the entrance door is properly closed. OlympiaGym informs its members, and members hereby acknowledge and
+        explicitly agree that they will be monitored by a camera system in the OlympiaGym premises. The purpose of operating such a camera system is not only to protect
+        the rights and legitimate interests of OlympiaGym, in the form of general protection of OlympiaGym property,
+        but also to protect the health and property of members moving in the OlympiaGym premises.
+        The camera system records only public areas, it is not operated in areas such as
+        toilets and locker rooms.
+        Only authorized persons have access to the recordings. Camera recordings are deleted every 31 days.
       </p>
 
       <p class="my-5 text-base leading-8">
-        Provozovatel: OlympiaGym s.r.o., Čujkovova 1714/21, Zábřeh, 700 30 Ostrava, IČO 21316341,
-        Kontaktní osoba: Lukáš Filip, olympiagymcz@gmail.com, +420 735 935 028
+        Operator: OlympiaGym s.r.o., Čujkovova 1714/21, Zábřeh, 700 30 Ostrava, IČO 21316341,
+        Contact person: Lukáš Filip, olympiagymcz@gmail.com, +420 735 935 028
       </p>
-
 
     </div>
   </section>
