--- a/en/contact_en.html
+++ b/en/contact_en.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>Olympia Gym - kontaktujte nás</title>
+  <title>Olympia Gym - Contact Us</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="/static/output.css" />
   <link
@@ -12,14 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
   <link rel="icon" href="/static/images/favicon.png" />
-  <meta name="description" content="Olympia Gym - pro ty co chtejí cvičit." />
-  <meta property="og:title" content="Olympia Gym - kontaktujte nás" />
-  <meta property="og:description" content="Olympia Gym - pro ty co chtejí cvičit." />
+  <meta name="description" content="Olympia Gym - for those who want to exercise." />
+  <meta property="og:title" content="Olympia Gym - Contact Us" />
+  <meta property="og:description" content="Olympia Gym - for those who want to exercise." />
   <meta property="og:image" content="/static/images/og_image.png" />
   <meta property="og:url" content="https://olympiagym.cz/rules.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Olympia Gym" />
-  <meta property="og:locale" content="cs_CZ" />
+  <meta property="og:locale" content="en_US" />
   <meta property="og:image:type" content="image/.png" />
   <meta property="og:image:width" content="1084" />
   <meta property="og:image:height" content="703" />
@@ -36,17 +36,17 @@
         </a>
       </div>
       <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
-        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
+        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Membership</a>
         <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
-        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
-        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
+        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
+        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Rules</a>
+        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Contact</a>
       </div>
       <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
         <a href="../index.html"
           class="text-sm font-semibold leading-6 text-white">CZ<span aria-hidden="true">🇨🇿</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
-          class="text-sm font-semibold leading-6 text-white">Správa členství<span aria-hidden="true">&rarr;</span></a>
+          class="text-sm font-semibold leading-6 text-white">Membership Management<span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
   </header>
@@ -54,8 +54,8 @@
   <section class="px-6 py-24 sm:py-16 lg:px-8">
     <div class="px-4 py-16 mx-auto max-w-7xl sm:px-6 lg:py-20 lg:px-8">
       <div class="max-w-2xl mx-auto text-center lg:max-w-4xl">
-        <h2 class="text-3xl font-extrabold text-gray-900">Navštivte nás</h2>
-        <p class="mt-4 text-lg text-gray-500">V objektu Olympie naproti Alberta kousek od Globusu.</p>
+        <h2 class="text-3xl font-extrabold text-gray-900">Visit Us</h2>
+        <p class="mt-4 text-lg text-gray-500">In the Olympia complex opposite Albert, near Globus.</p>
       </div>
       <div class="mt-16 lg:mt-20">
         <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
@@ -67,17 +67,17 @@
           <div>
             <div class="max-w-full mx-auto overflow-hidden rounded-lg">
               <div class="px-6 py-4">
-                <h3 class="text-lg font-medium text-gray-900">Naše adresa</h3>
+                <h3 class="text-lg font-medium text-gray-900">Our Address</h3>
                 <p class="mt-1 text-gray-600">Ludvíka Podéště 1974/25, 708 00 Ostrava</p>
               </div>
               <div class="px-6 py-4 border-t border-gray-200">
-                <h3 class="text-lg font-medium text-gray-900">Otevřeno</h3>
-                <p class="mt-1 text-gray-600">Pondělí - Neděle: Nonstop</p>
+                <h3 class="text-lg font-medium text-gray-900">Open</h3>
+                <p class="mt-1 text-gray-600">Monday - Sunday: Nonstop</p>
               </div>
               <div class="px-6 py-4 border-t border-gray-200">
                 <h3 class="text-lg font-medium text-gray-900">Contact</h3>
                 <p class="mt-1 text-gray-600">Email: olympiagymcz@gmail.com</p>
-                <p class="mt-1 text-gray-600">Telefon: +420 735 935 028</p>
+                <p class="mt-1 text-gray-600">Phone: +420 735 935 028</p>
               </div>
             </div>
           </div>
