--- a/en/gallery_en.html
+++ b/en/gallery_en.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="cs">
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
-  <title>Olympia Gym - provozní řád</title>
+  <title>Olympia Gym - Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="/static/output.css" />
   <link
@@ -12,14 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
   <link rel="icon" href="/static/images/favicon.png" />
-  <meta name="description" content="Olympia Gym - pro ty co chtejí cvičit." />
-  <meta property="og:title" content="Olympia Gym - Galerie" />
-  <meta property="og:description" content="Olympia Gym - pro ty co chtejí cvičit." />
+  <meta name="description" content="Olympia Gym - for those who want to exercise." />
+  <meta property="og:title" content="Olympia Gym - Gallery" />
+  <meta property="og:description" content="Olympia Gym - for those who want to exercise." />
   <meta property="og:image" content="/static/images/og_image.png" />
   <meta property="og:url" content="https://olympiagym.cz/rules.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Olympia Gym" />
-  <meta property="og:locale" content="cs_CZ" />
+  <meta property="og:locale" content="en_US" />
   <meta property="og:image:type" content="image/.png" />
   <meta property="og:image:width" content="1084" />
   <meta property="og:image:height" content="703" />
@@ -36,17 +36,17 @@
         </a>
       </div>
       <div class="flex gap-x-2 md:gap-x-12 max-xs:order-last max-xs:basis-full max-xs:justify-around">
-        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Členství</a>
+        <a href="index_en.html#clenstvi" class="text-sm font-semibold leading-6 text-white">Membership</a>
         <a href="index_en.html#faq" class="text-sm font-semibold leading-6 text-white">FAQ</a>
-        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Galerie</a>
-        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Provozní řád</a>
-        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Kontakt</a>
+        <a href="gallery_en.html" class="text-sm font-semibold leading-6 text-white">Gallery</a>
+        <a href="rules_en.html" class="text-sm font-semibold leading-6 text-white">Rules</a>
+        <a href="contact_en.html" class="text-sm font-semibold leading-6 text-white">Contact</a>
       </div>
       <div class="flex justify-end gap-x-2 grow shrink-0 basis-1/3">
         <a href="../index.html"
           class="text-sm font-semibold leading-6 text-white">CZ<span aria-hidden="true">🇨🇿</span></a>
         <a href="https://billing.stripe.com/p/login/4gw4k7dK80WC6Z2eUU"
-          class="text-sm font-semibold leading-6 text-white">Správa členství<span aria-hidden="true">&rarr;</span></a>
+          class="text-sm font-semibold leading-6 text-white">Membership Management<span aria-hidden="true">&rarr;</span></a>
       </div>
     </nav>
   </header>
