--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
   <section class="px-6 py-16 sm:py-8 lg:px-8" id="gallery">
     <div class="container h-full py-6 mx-auto sm:py-8 lg:py-12">
       <div class="flex items-center justify-between gap-8 mb-4 sm:mb-8 md:mb-12">
-        <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl dark:text-white">Jak to u nás vypadá</h2>
+        <h2 class="text-2xl font-bold text-gray-900 lg:text-3xl">Jak to u nás vypadá</h2>
 
         <a href="gallery.html"
-          class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-hidden dark:bg-gray-700 dark:border-none dark:text-gray-200 ring-indigo-300 hover:bg-gray-100 focus-visible:ring-3 active:bg-gray-200 md:px-8 md:py-3 md:text-base">
+          class="inline-flex items-center px-4 py-2 text-sm font-semibold text-center text-gray-500 transition duration-100 bg-white border rounded-lg outline-hidden ring-indigo-300 hover:bg-gray-100 focus-visible:ring-3 active:bg-gray-200 md:px-8 md:py-3 md:text-base">
           Více
           <svg class="w-6 h-6 ml-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
             <path fill-rule="evenodd"
